[gd_scene load_steps=2 format=2]

[ext_resource path="res://ConnectionSuccessful/ConnectionSuccessful.gd" type="Script" id=1]

[node name="ConnectionSuccessful" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessfulText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -100.0
margin_right = 141.0
margin_bottom = -86.0
text = "You have successfully connected to a server"

[node name="WaitingText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -7.0
margin_right = 79.0
margin_bottom = 7.0
text = "Waiting for game to start"

[node name="DisconnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 40.0
margin_right = 41.0
margin_bottom = 60.0
text = "disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerDisconnectedPopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -134.0
margin_right = 205.0
margin_bottom = 134.0

[node name="DisconnectedText" type="Label" parent="ServerDisconnectedPopup"]
margin_top = 30.0
margin_right = 386.0
margin_bottom = 61.0
text = "You have been disconnected from the host please rejoin the
server or create on on this device. "
align = 1

[node name="MainMenuButton" type="Button" parent="ServerDisconnectedPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = 40.0
margin_right = 77.0
margin_bottom = 60.0
text = "go back to main menu"

[node name="JoinServerButton" type="Button" parent="ServerDisconnectedPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -10.0
margin_right = 95.0
margin_bottom = 10.0
text = "go back to join server menu"

[connection signal="pressed" from="DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="ServerDisconnectedPopup/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="ServerDisconnectedPopup/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
